# kleptosyn

./: .env  .gitignore  .pre-commit-config.yaml  NOTES.md  README.md  classify.ipynb  demo.py  load_kuzu.ipynb  occrp.ipynb  pyproject.toml  requirements.txt  rf_nodes.joblib  visualize.ipynb
data/: README.md  export.json
kleptosyn/: __init__.py  net.py  sim.py  syn.py  version.py
patterns/: burst.md  mule.md  rmf.md
